Added patch notes to the game

--- a/client/src/locales/en/ui.json
+++ b/client/src/locales/en/ui.json
@@ -314,6 +314,17 @@
       "en": "English",
       "es": "Español"
     }
+  },
+  "patchNotes": {
+    "title": "Patch Notes",
+    "version": "Version {{version}}",
+    "date": "Released: {{date}}",
+    "added": "Added",
+    "changed": "Changed",
+    "fixed": "Fixed",
+    "removed": "Removed",
+    "noNotes": "No patch notes available",
+    "close": "Close"
   }
 }
 
